# ConnectX

./: .gitignore  Connect4.py  README.md  SETUP.md  app.py  index.html  pyproject.toml  scoring.py
jules-scratch/verification/: verify_frontend.py
